# MCP-A2A-Udemy

./: ToolCalling.ipynb  pyproject.toml
01_FirstMCPServer/: client.py  script.sh
02_TransportMethods/sse/: client.py
02_TransportMethods/stdinout/: client.py
02_TransportMethods/streamable_http/: client.py
03_RessourcesPromptsTools/: client.py
04_Context/: client.py  server.py
06_Roots/: client.py
07_Sampling/: client.py  server.py
08_LangGraph_MCP/: client.py  server.py
09_Authorization/: client.py  server.py  test_connection.py
10_Fastapi_Integration/: app.py  fromapp_client.py  server.py
11_Composition/: server.py
12_Proxy_Servers/: backend_server_1.py  backend_server_2.py
13_Capstone/: furniture_server.py  llm_furniture_agent.py
14_Env_ToolFlags/: server.py
18_Context_State/: server.py
