[project]
name = "mcp-a2a-udemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "fastmcp>=3.2.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "starlette==0.40.0",
    "sse-starlette==2.4.1",
    "langchain-core>=0.3.60",
    "langchain-mcp-adapters>=0.1.1",
    "langchain-openai>=0.3.17",
    "langgraph>=0.4.5",
    "python-jose>=3.4.0",
    "ruff>=0.11.10",
    "uvicorn>=0.34.2",
]
